# aoc2023

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: 24.txt
src/: lib.rs  util.rs
