[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
num = "0.4"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
nursery = "warn"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
